--- a/css/reservar.css
+++ b/css/reservar.css
@@ -1,3 +1,19 @@
+.clearfix:before,
+.clearfix:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
+}
+
+.clearfix:after {
+  clear: both;
+}
+
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
 .bar {
     background-color: #353535;
     background-size: auto;
@@ -15,7 +31,7 @@
     padding-top: 1rem;
 }
 
-.logo a{
+.logo a {
     font-family: 'Oswald', sans-serif;
     color: white;
     text-transform: uppercase;
