--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ footer {
     font-size: 2rem;
     text-transform: uppercase;
     text-decoration: none;
-    margin-right: 0.5rem;
+    margin-right: 0.3rem;
     padding: 1rem 1rem;
     display: inline-block;
     transition: all 0.4s ease;
@@ -356,7 +356,7 @@ textarea {
 }
 
 input:not([type="submit"]),
-textarea {
+textarea,select:not([type=submit]) {
     padding: 1rem;
     display: block;
     width: 100%;
@@ -419,4 +419,22 @@ textarea {
 
 .icon h3 {
     text-transform: uppercase;
+}
+
+/* Aqui empieza facturas*/
+
+.foto-portada{
+    padding-top: 0;
+    margin-top: 0;
+    background-image: url(../img/fondo_factura.jpg);
+    height: 82vh;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.formulario{
+    padding: 2rem;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.3);
+    position: relative;
 }
